Found a bug where the icons within the forms were not showing, because I had made them all white. Fixed the bug by making the code for the desired white icon more specific

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,7 +43,7 @@ nav, .page-title, .card-title, .add-button {
 
 /* Icon color override - wasn't changing Icon color to white in side-nav */
 
-i {
+.side-nav i {
     color:#fff!important
 }
 
